[package]
name = "pg-amqp-bridge"
version = "0.0.7"
authors = ["steve-chavez <stevechavezast@gmail.com>"]

[[test]]
name = "main"
harness = false

[dependencies]
amqp = "0.1.0"
env_logger = "0.4.2"
fallible-iterator = "0.2.0"
log = "0.3.7"
postgres = "0.17.1"
r2d2 = "0.8"
r2d2_postgres = "0.16.0-alpha.1"
openssl = "0.10"
postgres-openssl = "0.3.0-rc.1"

[dev-dependencies]
rustc-test = "0.3.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
